# helpro

./: README.md  pyproject.toml
doc/: releasenotes.md
examples/1.2_S66x8CP/: 0.list_structures.py
examples/2.0_S66x8_Ms/: 1.run_helpro.py
examples/2.1_S66x8_Ds/: 1.run_helpro.py
examples/2.2_S66x8_CP/: 1.run_helpro.py
examples/energies/0.1_python/: 0.extract_out.py  0.extract_xml.py  1.plot.py  README.md
examples/molpro.2024.1/0.0_basic/: README.md
examples/molpro.2024.1/0.1_python/: 1.run_helpro.py  README.md  ase.xyz  make_jobList.py
examples/molpro.2024.1/1.0_atoms/: 1.run_helpro.py  README.md
examples/slurm/: molpro.2024.1.0_012_384_2d.sh
helpro/: __init__.py  molpro.py  utils.py
helpro/molpro/: bases.py  constraints.py  counterpoise.py  data.py  inp.py  methods.py  out.py  xml.py
tests/: test_molpro.py
tests/molpro/: test_cli.py
tests/molpro/inp/: test_inp.py
tests/molpro/xml/: test_read_molpro_xml.py
tests/molpro/xml/data/C/CCSD/: molpro.xml
tests/molpro/xml/data/C/CCSD_T/: molpro.xml
tests/molpro/xml/data/C/DF-CCSD/: molpro.xml
tests/molpro/xml/data/C/DF-CCSD_T/: molpro.xml
tests/molpro/xml/data/C/DF-MP2/: molpro.xml
tests/molpro/xml/data/C/DF-PNO-LCCSD/: molpro.xml
tests/molpro/xml/data/C/DF-PNO-LCCSD_T/: molpro.xml
tests/molpro/xml/data/Cm3/DF-MP2-F12/: molpro.xml
tests/molpro/xml/data/Water-Water_1/CCSD_T/: molpro.xml
tests/molpro/xml/data/counterpoise/: molpro.xml
tests/molpro/xml/data/forces/: molpro.xml
tests/molpro/xml/data/ghost/: molpro.xml
tests/molpro/xml/data/optg/: molpro.xml
(+183 files in other folders)
