[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "helpro"
version = "0.2.0"
dependencies = [
    "ase",
]
requires-python = ">=3.10"
authors = [
    {name = "Yuji Ikeda"},
]

[tool.ruff.lint]
preview = true  # necessary to activate many pycodestyle rules
select = ["ALL"]
ignore = ["CPY", "S101"]
