[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "helpro"
version = "0.5.0"
dependencies = [
    "ase",
]
requires-python = ">=3.10"
authors = [
    {name = "Yuji Ikeda"},
]

[project.scripts]
helpro = "helpro.__init__:main"

[tool.ruff.lint]
preview = true  # necessary to activate many pycodestyle rules
select = ["ALL"]
ignore = ["CPY", "S101"]
